<resources>
    <string name="app_name">Restaurant_Application</string>
    <string name="action_settings">Settings</string>
    <string name="tv_main_title">Discover \nRestaurants</string>
    <string name="tv_description">Mexican.18 Tank house Lane Hitspot for mexican e tape with a pation Opem.Until 12:00AM.</string>
    <string name="lbl_menu1"><![CDATA[N Cedar St & Cedar]]></string>
<string name="tv_description2">
"If you're a Mexican food fan, I think you'll like this one. A great start to a Mexican Fiesta or Cinco de Mayo celebration, game night appetizer, or even an after-school snack for the kids. It's a creamy, one-bite hors d'oeuvre packed with fresh flavor."
</string>
    <string name = "lbl_ok">OK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name = "str_geo"><![CDATA[http://maps.google.com/maps?daddr=]]>%1$s,%2$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_detail_title">Pickle Jam, \nAnd Chutney</string>
    <string name="tv_time">10am-10pm</string>
    <string name="tv_1_5km">1.5km</string>
    <string name="tv_map">Map View</string>
    <string name = "details">Details</string>
    <string name = "menu">Menu</string>
    <string name = "reviews">Reviews</string>
    <string name="tv_delivery">Delivery</string>
</resources>
